--- a/.github/workflows/check-conflicts-markers.yml
+++ b/.github/workflows/check-conflicts-markers.yml
@@ -15,11 +15,11 @@ jobs:
 
           conflicts=$(grep -rnH '<<<<<<<\|=======\|>>>>>>>' --include=\*.md . || true)
           if [ -n "$conflicts" ]; then
-            echo "Merge conflict markers found in files. Please remove them:"
-            echo "*************************"
-            echo -e "\033[31m$conflicts\033[0m"
-            echo "*************************"
+            echo "Merge conflict markers were found in files. Please remove them:"
+            echo -e "*************************\033[31m"
+            echo -e "$conflicts"
+            echo -e "\033[0m*************************"
             exit 1
           else
-            echo "No marker found! \033[32mPassed\033[0m"
+            echo -e "No marker found! \033[32mPassed\033[0m"
           fi
