--- a/.github/workflows/check-conflicts-markers.yml
+++ b/.github/workflows/check-conflicts-markers.yml
@@ -18,14 +18,15 @@ jobs:
           if [ ${#conflicts[@]} -gt 0 ]; then
             echo -e "Merge conflict markers found in Markdown files. Please remove them:"
             echo "*************************************************************"
+            echo ""
             echo 
             for conflict in "${conflicts[@]}"; do
               # Split the output into file, line number, and text
               IFS=":" read -r file line_number line_text <<< "$conflict"
 
-              echo -e "\033[31mIn file: \n$file\n\tAt line:($line_number)\n\n\t\t $line_text\033[0m"
-              echo ""
+              echo -e "\033[31m$file(line: $line_number): $line_text\033[0m"
             done
+            echo ""
             echo "*************************************************************"
             exit 1
           else
