--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
   "newLinkFormat": "relative",
   "showUnsupportedFiles": true,
   "attachmentFolderPath": ".attachments",
-  "livePreview": true
+  "livePreview": true,
+  "defaultViewMode": "preview"
 }
